--- a/PetApp_Empresa/Views/CarritoDeCompras/Index.cshtml
+++ b/PetApp_Empresa/Views/CarritoDeCompras/Index.cshtml
@@ -1,41 +1,52 @@
-﻿@model IEnumerable<PetApp_Empresa.Models.CarritoDeCompra>
+﻿@model PetApp_Empresa.Models.CarritoDeCompra
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Carrito de Compras";
 }
 
-<h1>Index</h1>
+<h1>Carrito de Compras</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Total)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Usuario)
-            </th>
-            <th></th>
+            <th>Producto</th>
+            <th>Cantidad</th>
+            <th>Precio Unitario</th>
+            <th>Subtotal</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Total)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Usuario.UsuarioId)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.CarritoId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CarritoId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CarritoId">Delete</a>
-            </td>
-        </tr>
-}
+        @if (Model.CarritoAccesorios != null && Model.CarritoAccesorios.Any())
+        {
+            foreach (var item in Model.CarritoAccesorios)
+            {
+                <tr>
+                    <td>@item.Accesorio?.Nombre</td>
+                    <td>@item.Cantidad</td>
+                    <td>@item.Accesorio?.Precio.ToString("C")</td>
+                    <td>@(item.Accesorio?.Precio * item.Cantidad).ToString("C")</td>
+                </tr>
+            }
+        }
+        else
+        {
+            <tr>
+                <td colspan="4" class="text-center">No hay productos en el carrito.</td>
+            </tr>
+        }
     </tbody>
 </table>
+
+@if (Model.CarritoAccesorios != null && Model.CarritoAccesorios.Any())
+{
+    <h3>Total: @(Model.Total.HasValue ? Model.Total.Value.ToString("C") : "N/A")</h3>
+    <form asp-action="ProcesarPago" method="post">
+        @Html.AntiForgeryToken()
+        <button type="submit" class="btn btn-primary">Realizar Pago</button>
+    </form>
+}
+else
+{
+    <h3>El carrito está vacío.</h3>
+}
+
