--- a/PetApp_Empresa/Views/Accesorios/Delete.cshtml
+++ b/PetApp_Empresa/Views/Accesorios/Delete.cshtml
@@ -1,45 +1,53 @@
 ﻿@model PetApp_Empresa.Models.Accesorio
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Detalles del Accesorio";
 }
 
-<h1>Delete</h1>
+<h1>Detalles del Accesorio</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Accesorio</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Nombre)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Descripcion)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Descripcion)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Precio)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Precio)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Vendedor)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Vendedor.UsuarioId)
         </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CantidadDisponible)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CantidadDisponible)
+        </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="AccesorioId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+
+<div>
+    <a asp-action="Edit" asp-route-id="@Model?.AccesorioId">Editar</a> |
+    <a asp-action="Index">Volver a la lista</a>
 </div>
