--- a/PetApp_Empresa/Views/Accesorios/Edit.cshtml
+++ b/PetApp_Empresa/Views/Accesorios/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model PetApp_Empresa.Models.Accesorio
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar Accesorio";
 }
 
-<h1>Edit</h1>
+<h1>Editar Accesorio</h1>
 
 <h4>Accesorio</h4>
 <hr />
@@ -13,37 +13,50 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="AccesorioId" />
+
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
                 <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Descripcion" class="control-label"></label>
                 <input asp-for="Descripcion" class="form-control" />
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Precio" class="control-label"></label>
                 <input asp-for="Precio" class="form-control" />
                 <span asp-validation-for="Precio" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="CantidadDisponible" class="control-label"></label>
+                <input asp-for="CantidadDisponible" class="form-control" />
+                <span asp-validation-for="CantidadDisponible" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="VendedorId" class="control-label"></label>
                 <select asp-for="VendedorId" class="form-control" asp-items="ViewBag.VendedorId"></select>
                 <span asp-validation-for="VendedorId" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver a la lista</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
