--- a/PetApp_Empresa/Views/Home/DashboardAdmin.cshtml
+++ b/PetApp_Empresa/Views/Home/DashboardAdmin.cshtml
@@ -14,8 +14,8 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link btn btn-outline-primary mb-2" asp-area="" asp-controller="Accesorios" asp-action="CompraAccesorio">
-                <i class="fas fa-box-open"></i> Accesorios
+            <a class="nav-link btn btn-outline-primary mb-2" asp-area="" asp-controller="Accesorios" asp-action="ListadoAccesorios">
+                <i class="fas fa-box-open"></i> ListadoAccesorios
             </a>
         </li>
         <li class="nav-item">
