--- a/PetApp_Empresa/Views/Home/DashboardCliente.cshtml
+++ b/PetApp_Empresa/Views/Home/DashboardCliente.cshtml
@@ -10,7 +10,7 @@
 <!-- Opciones para el Cliente -->
 <div class="mb-4">
     <a class="btn btn-primary" asp-action="Adoptar">Adoptar una mascota</a>
-    <a class="btn btn-secondary" asp-action="ComprarAccesorios">Comprar Accesorios</a>
+    <a class="btn btn-secondary" asp-controller="Accesorios" asp-action="ListadoAccesorios">Comprar Accesorios</a>
     <a class="btn btn-success" asp-action="Donar">Hacer una Donación</a>
 </div>
 
@@ -20,11 +20,22 @@
 <h3>Mis Adopciones</h3>
 @if (adopciones != null && adopciones.Any())
 {
+    <h4>Adopciones en Proceso</h4>
     <ul>
-        @foreach (var adopcion in adopciones)
+        @foreach (var adopcion in adopciones.Where(a => a.Estado == "En Proceso"))
         {
             <li>
-                Mascota: @adopcion.Mascota.Nombre - Fecha de adopción: @adopcion.FechaSolicitud?.ToString("dd/MM/yyyy")
+                Mascota: @adopcion.Mascota.Nombre - Fecha de solicitud: @adopcion.FechaSolicitud?.ToString("dd/MM/yyyy")
+            </li>
+        }
+    </ul>
+
+    <h4>Adopciones Aprobadas</h4>
+    <ul>
+        @foreach (var adopcion in adopciones.Where(a => a.Estado == "Adoptado"))
+        {
+            <li>
+                Mascota: @adopcion.Mascota.Nombre - Fecha de aprobación: @adopcion.FechaAprobacion?.ToString("dd/MM/yyyy")
             </li>
         }
     </ul>
