--- a/PetApp_Empresa/Views/Donaciones/Create.cshtml
+++ b/PetApp_Empresa/Views/Donaciones/Create.cshtml
@@ -1,39 +1,41 @@
 ﻿@model PetApp_Empresa.Models.Donacione
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear Donación";
 }
+<link rel="stylesheet" href="~/css/donaciones.css" />
 
-<h1>Create</h1>
 
-<h4>Donacione</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<h1 class="text-center text-primary mb-4">Realizar Donación</h1>
+
+<div class="row justify-content-center">
+    <div class="col-md-6">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="RefugioId" class="control-label"></label>
-                <select asp-for="RefugioId" class ="form-control" asp-items="ViewBag.RefugioId"></select>
+            <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
+            
+            <div class="form-group mb-3">
+                <label asp-for="RefugioId" class="form-label">Seleccionar Refugio</label>
+                <select asp-for="RefugioId" class="form-select" asp-items="ViewBag.RefugioId">
+                    <option value="">Seleccione un refugio...</option>
+                </select>
+                <span asp-validation-for="RefugioId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="UsuarioId" class="control-label"></label>
-                <select asp-for="UsuarioId" class ="form-control" asp-items="ViewBag.UsuarioId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Monto" class="control-label"></label>
-                <input asp-for="Monto" class="form-control" />
+
+            <div class="form-group mb-3">
+                <label asp-for="Monto" class="form-label">Monto de Donación</label>
+                <input asp-for="Monto" class="form-control" placeholder="Ingrese el monto en Bs." />
                 <span asp-validation-for="Monto" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+
+            <div class="form-group text-center">
+                <button type="submit" class="btn btn-success btn-lg">Donar</button>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+<div class="text-center mt-4">
+    <a asp-action="Index" class="btn btn-secondary">Regresar al listado</a>
 </div>
 
 @section Scripts {
